# mellow-ferret

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  README.md  circleci.old  gitignore.old_py  pytest.sh  requirements.txt
.circleci/: config.yml
docker/: Dockerfile  bash_aliases
dox/gimp/: 250x250.xcf
dox/magic_draw/: ferret.mdzip  ferret.mdzip.bak
dox/open_office/: vision.odt
ferretc/: README.md
ferretd/: CMakeLists.txt  README.md  ferretd_config.h.in
ferretd/gtestsrc/: run_mode.cc
ferretd/include/: bc780.h  ferretd_config.h  killme.h
ferretd/src/: bc780.cpp  driver.cc  driver.cpp
ferretdlib/: CMakeLists.txt  README.md
ferretdlib/gtestsrc/: run_mode.cpp
ferretdlib/include/: bc780.h  run_mode.h
ferretdlib/src/: bc780.cc  bc780.cpp  run_mode.cc  run_mode.cpp
ferretdtest/: CMakeLists.txt
lab/: noaa_demo.sh  wfm_demo.sh  x1.py  x2.py  x3.py
src/: bc780.py  bc780_dispatch.py  command_at.py  command_cb.py  command_rf.py  command_rm.py  command_sg.py  command_si.py  command_vr.py  config.aviation  config.yaml  dispatcher.py  ferret.py  gui.py  requirements.osx  requirements.ubuntu
src.old_py/: bc780.py  bc780_dispatch.py  command_cb.py  command_md.py  command_rf.py  command_si.py  config.kqed  config.yaml
tests/: test_command_rf.py  test_command_si.py  test_command_vr.py
